--- a/index.html
+++ b/index.html
@@ -160,5 +160,9 @@
     <div id="background_properties">
 
     </div>
+    <div id="box_model">
+        Box Model
+    </div>
+    <button>Expanding Button</button>
 </body>
 </html>
